--- a/index.html
+++ b/index.html
@@ -10,193 +10,209 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="page-body">
-    <header class="header header-container">
-      <nav class="main-nav">
-        <a href="./index.html" class="logo">
-          Web<span class="logo-accent">Studio</span>
-        </a>
-        <ul class="nav-list">
-          <li>
-            <a href="./index.html" class="nav-link">Studio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-contacts">
-        <ul class="address-list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo">
+            Web<span class="logo-accent">Studio</span>
+          </a>
+          <ul class="nav-list">
+            <li>
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li>
+              <a href="" class="nav-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-contacts">
+          <ul class="address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn-order">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn-order">Order Service</button>
+        </div>
       </section>
 
       <section class="features">
-        <h2 class="section-title">Features</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-title">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container features-container">
+          <h2 class="section-title">Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-title">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="section-title-team">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-card">
-            <img
-              src="./images/images-team-card-1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/images-team-card-2.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/images-team-card-3.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/images-team-card-4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title-team">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                src="./images/images-team-card-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/images-team-card-2.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/images-team-card-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/images-team-card-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="portfolio">
-        <h2 class="section-title-portfolio">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li>
-            <img
-              src="./images/images-banking-app.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/images-cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/images-meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/images-taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/images-screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/images-online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title-portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img
+                src="./images/images-banking-app.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="portfolio-title">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/images-cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="portfolio-title">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/images-meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="portfolio-title">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/images-taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="portfolio-title">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/images-screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="portfolio-title">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/images-online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="portfolio-title">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">
-        Web<span class="footer-logo-accent">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo">
+          Web<span class="footer-logo-accent">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
