--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="features">
         <div class="container features-container">
-          <h2 class="section-title">Features</h2>
+          <h2 class="section-title visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-title">Strategy</h3>
