--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-info">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -115,8 +117,10 @@
                 alt="Tom Ford"
                 width="264"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -124,8 +128,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-info">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -133,8 +139,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-info">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
