--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
           <h2 class="section-title-team">Our Team</h2>
           <ul class="team-list">
-            <li class="team-card">
+            <li class="team-item">
               <img
                 src="./images/images-team-card-1.jpg"
                 alt="Mark Guerrero"
@@ -111,7 +111,7 @@
                 <p class="team-position">Product Designer</p>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-item">
               <img
                 src="./images/images-team-card-2.jpg"
                 alt="Tom Ford"
@@ -122,7 +122,7 @@
                 <p class="team-position">Frontend Developer</p>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-item">
               <img
                 src="./images/images-team-card-3.jpg"
                 alt="Camila Garcia"
@@ -133,7 +133,7 @@
                 <p class="team-position">Marketing</p>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team-item">
               <img
                 src="./images/images-team-card-4.jpg"
                 alt="Daniel Wilson"
