--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo footer-logo-link">
+        <a href="./index.html" class="footer-logo">
           Web<span class="footer-logo-accent">Studio</span>
         </a>
         <p class="footer-text">
