--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
           <h2 class="section-title-team">Our Team</h2>
           <ul class="team-list">
-            <li class="team-item team-card-first">
+            <li class="team-item">
               <img
                 src="./images/images-team-card-1.jpg"
                 alt="Mark Guerrero"
