--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container">
           <h2 class="section-title-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/images-banking-app.jpg"
                 alt="Banking App"
@@ -163,7 +163,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/images-cashless-payment.jpg"
                 alt="Cashless Payment"
@@ -174,7 +174,7 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/images-meditation-app.jpg"
                 alt="Meditation App"
@@ -185,7 +185,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/images-taxi-service.jpg"
                 alt="Taxi Service"
@@ -196,7 +196,7 @@
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/images-screen-illustrations.jpg"
                 alt="Screen Illustrations"
@@ -207,7 +207,7 @@
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/images-online-courses.jpg"
                 alt="Online Courses"
