--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container">
           <h2 class="section-title-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item">
+            <li class="portfolio-item portfolio-first-card">
               <div class="portfolio-wrapper">
                 <img
                   src="./images/images-banking-app.jpg"
