--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <h2 class="section-title-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <div class="portfolio-wrapper">
+              <div class="portfolio-card">
                 <img
                   src="./images/images-banking-app.jpg"
                   alt="Banking App"
@@ -166,7 +166,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-wrapper">
+              <div class="portfolio-card">
                 <img
                   src="./images/images-cashless-payment.jpg"
                   alt="Cashless Payment"
@@ -179,7 +179,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-wrapper">
+              <div class="portfolio-card">
                 <img
                   src="./images/images-meditation-app.jpg"
                   alt="Meditation App"
@@ -192,7 +192,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-wrapper">
+              <div class="portfolio-card">
                 <img
                   src="./images/images-taxi-service.jpg"
                   alt="Taxi Service"
@@ -205,7 +205,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-wrapper">
+              <div class="portfolio-card">
                 <img
                   src="./images/images-screen-illustrations.jpg"
                   alt="Screen Illustrations"
@@ -218,7 +218,7 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-wrapper">
+              <div class="portfolio-card">
                 <img
                   src="./images/images-online-courses.jpg"
                   alt="Online Courses"
